// 那覇魚類WMS データベーススキーマ
// Generated from Prisma schema

Project nahagyorui_wms {
  database_type: 'PostgreSQL'
  Note: '軟骨魚類（サメ・エイ等）専門の在庫管理システム'
}

// 商品マスタ
Table products {
  id String [pk, note: 'CUID']
  code String [unique, not null, note: '商品コード']
  name String [not null, note: '商品名']
  specification String [note: '規格（サイズ等）']
  unit String [not null, note: '単位（kg, 箱, 匹など）']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  Note: '商品マスタ - 取り扱う軟骨魚類の商品情報'
}

// ロット
Table lots {
  id String [pk, note: 'CUID']
  lotNumber String [unique, not null, note: 'ロット番号（YYYYMMDD-商品コード-連番）']
  productId String [not null, ref: > products.id]
  receivingDate DateTime [not null, note: '入庫日']
  unitPrice Decimal [not null, note: '仕入単価']
  createdAt DateTime [default: `now()`, not null]

  Note: 'ロット管理 - 入庫単位でのトレーサビリティ管理'
}

// 在庫（商品×ロット単位）
Table inventories {
  id String [pk, note: 'CUID']
  productId String [not null, ref: > products.id]
  lotId String [not null, ref: > lots.id]
  quantity Decimal [not null, note: '在庫数量']
  updatedAt DateTime [not null]

  indexes {
    (productId, lotId) [unique]
  }

  Note: '在庫テーブル - 商品×ロット単位での現在庫'
}

// 入庫ヘッダー
Table receivings {
  id String [pk, note: 'CUID']
  receivingNumber String [unique, not null, note: '入庫番号']
  receivingDate DateTime [not null, note: '入庫日']
  deliverySlipNo String [note: '納品書No']
  note String [note: '備考']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  Note: '入庫ヘッダー - 入庫処理の親レコード'
}

// 入庫明細
Table receiving_details {
  id String [pk, note: 'CUID']
  receivingId String [not null, ref: > receivings.id]
  productId String [not null, ref: > products.id]
  quantity Decimal [not null, note: '数量']
  unitPrice Decimal [not null, note: '仕入単価']
  lotNumber String [not null, note: '採番されたロット番号']
  createdAt DateTime [default: `now()`, not null]

  Note: '入庫明細 - 入庫処理の明細行'
}

// 在庫移動履歴（監査用）
Table inventory_transactions {
  id String [pk, note: 'CUID']
  productId String [not null, ref: > products.id]
  lotId String [not null, ref: > lots.id]
  transactionType String [not null, note: 'RECEIVING（入庫）, SHIPPING（出庫）, PROCESSING（加工）, ADJUSTMENT（調整）']
  quantity Decimal [not null, note: '変動数量（入庫:+, 出庫:-）']
  referenceType String [note: '参照元種別（RECEIVING, SHIPPING等）']
  referenceId String [note: '参照元ID']
  note String [note: '備考']
  createdAt DateTime [default: `now()`, not null]

  Note: '在庫移動履歴 - 全ての在庫変動を記録（監査用）'
}

// Enum for transaction types (reference)
Enum transaction_type {
  RECEIVING [note: '入庫']
  SHIPPING [note: '出庫']
  PROCESSING [note: '加工']
  ADJUSTMENT [note: '調整']
}
